add placeholder to buildings in woods log message